<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="character_avatar">Character avatar</string>
    <string name="favourite">Favourite</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="delete_favourite">Delete from favourites</string>
    <string name="all">All</string>
    <string name="cannot_fetch_resource_try_again_later">Cannot fetch resource. Please try again later.</string>

<!--    USED IN TESTS-->
    <string name="tag_has_border">has_border</string>
    <string name="tag_add_delete_favourite">add_delete_favourite</string>
    <string name="tag_lazy_list">lazy_list</string>
    <string name="tag_list_item_prefix">Character-</string>
</resources>